gcc/testsuite/g++.old-deja/g++.other/redecl2.C
// { dg-do assemble  }

struct S {
  S(int);
  S(int); // { dg-error "" } already declared

  ~S();
  ~S(); // { dg-error "" } already declared
};
